<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_collection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_all" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_decks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_decks" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_binders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_binders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_favorites" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_collection" />

</androidx.constraintlayout.widget.ConstraintLayout>